--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "vue3-chat-scroll": "^0.2.0"
     }
 }
