--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vue/compiler-sfc": "^3.4.18",
+        "@vue/reactivity": "^3.4.18",
+        "@vue/runtime-dom": "^3.4.18",
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
@@ -21,6 +24,8 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "emoji-mart": "^5.5.2",
+        "emoji-mart-vue-fast": "^15.0.1",
         "vue3-chat-scroll": "^0.2.0"
     }
 }
